AntlrXpg/src/it/unibz/udig/visuallangparser/grammar/generated/XpgParser.java
package it.unibz.udig.visuallangparser.grammar.generated;

// Generated from /Users/sara/Dropbox/tesi/tex/08-codice/Xpg.g4 by ANTLR 4.1
import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings(
	{ "all", "warnings", "unchecked", "unused", "cast" })
public class XpgParser extends Parser
{
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int DELTA = 1, GAMMA = 2, SEMANTICRULE = 3, LAYERS = 4, TRUE = 5, FALSE = 6, ARROW = 7, LT = 8, GT = 9, LPAREN = 10,
			RPAREN = 11, LGPAREN = 12, RGPAREN = 13, SEMICOLON = 14, COMMA = 15, COLON = 16, APICE = 17, UNDERSCORE = 18, UPPER = 19, LOWER = 20,
			DIGITS = 21, ENDOFLINE = 22, STRING = 23, WS = 24;
	public static final String[] tokenNames =
		{ "<INVALID>", "DELTA", "GAMMA", "SEMANTICRULE", "'LAYERS'", "'true'", "'false'", "'->'", "'<'", "'>'", "'('", "')'", "'{'", "'}'", "';'",
				"','", "':'", "'''", "'_'", "UPPER", "LOWER", "DIGITS", "';\n'", "STRING", "WS" };
	public static final int RULE_xpgfile = 0, RULE_layers = 1, RULE_layer = 2, RULE_productions = 3, RULE_production = 4,
			RULE_linearRepresentation = 5, RULE_relations = 6, RULE_rules = 7, RULE_triples = 8, RULE_semanticrules = 9, RULE_relation = 10,
			RULE_triple = 11, RULE_condition = 12, RULE_driver = 13, RULE_tester = 14, RULE_myrule = 15, RULE_idrel = 16, RULE_semanticrule = 17,
			RULE_idrelation = 18, RULE_nonterminal = 19, RULE_terminal = 20;
	public static final String[] ruleNames =
		{ "xpgfile", "layers", "layer", "productions", "production", "linearRepresentation", "relations", "rules", "triples", "semanticrules",
				"relation", "triple", "condition", "driver", "tester", "myrule", "idrel", "semanticrule", "idrelation", "nonterminal", "terminal" };

	@Override
	public String getGrammarFileName()
	{
		return "Xpg.g4";
	}

	@Override
	public String[] getTokenNames()
	{
		return tokenNames;
	}

	@Override
	public String[] getRuleNames()
	{
		return ruleNames;
	}

	@Override
	public ATN getATN()
	{
		return _ATN;
	}

	public XpgParser(TokenStream input)
	{
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class XpgfileContext extends ParserRuleContext
	{
		public LayersContext layers()
		{
			return getRuleContext(LayersContext.class, 0);
		}

		public ProductionsContext productions()
		{
			return getRuleContext(ProductionsContext.class, 0);
		}

		public XpgfileContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_xpgfile;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterXpgfile(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitXpgfile(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitXpgfile(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final XpgfileContext xpgfile() throws RecognitionException
	{
		XpgfileContext _localctx = new XpgfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xpgfile);
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(42);
				layers();
				setState(43);
				productions();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class LayersContext extends ParserRuleContext
	{
		public TerminalNode LAYERS()
		{
			return getToken(XpgParser.LAYERS, 0);
		}

		public TerminalNode RPAREN()
		{
			return getToken(XpgParser.RPAREN, 0);
		}

		public List<LayerContext> layer()
		{
			return getRuleContexts(LayerContext.class);
		}

		public TerminalNode LPAREN()
		{
			return getToken(XpgParser.LPAREN, 0);
		}

		public LayerContext layer(int i)
		{
			return getRuleContext(LayerContext.class, i);
		}

		public LayersContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_layers;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterLayers(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitLayers(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitLayers(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LayersContext layers() throws RecognitionException
	{
		LayersContext _localctx = new LayersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_layers);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(45);
				match(LAYERS);
				setState(46);
				match(LPAREN);
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0))
				{
					{
						{
							setState(47);
							layer();
						}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53);
				match(RPAREN);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class LayerContext extends ParserRuleContext
	{
		public List<TerminalNode> UNDERSCORE()
		{
			return getTokens(XpgParser.UNDERSCORE);
		}

		public TerminalNode ENDOFLINE()
		{
			return getToken(XpgParser.ENDOFLINE, 0);
		}

		public List<TerminalNode> DIGITS()
		{
			return getTokens(XpgParser.DIGITS);
		}

		public TerminalNode LOWER(int i)
		{
			return getToken(XpgParser.LOWER, i);
		}

		public TerminalNode UNDERSCORE(int i)
		{
			return getToken(XpgParser.UNDERSCORE, i);
		}

		public TerminalNode UPPER(int i)
		{
			return getToken(XpgParser.UPPER, i);
		}

		public TerminalNode DIGITS(int i)
		{
			return getToken(XpgParser.DIGITS, i);
		}

		public List<TerminalNode> LOWER()
		{
			return getTokens(XpgParser.LOWER);
		}

		public List<TerminalNode> UPPER()
		{
			return getTokens(XpgParser.UPPER);
		}

		public LayerContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_layer;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterLayer(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitLayer(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitLayer(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LayerContext layer() throws RecognitionException
	{
		LayerContext _localctx = new LayerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_layer);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(55);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)))
				{
					_errHandler.recoverInline(this);
				}
				consume();
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNDERSCORE) | (1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0))
				{
					{
						{
							setState(56);
							_la = _input.LA(1);
							if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNDERSCORE) | (1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0)))
							{
								_errHandler.recoverInline(this);
							}
							consume();
						}
					}
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(62);
				match(ENDOFLINE);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionsContext extends ParserRuleContext
	{
		public ProductionContext production(int i)
		{
			return getRuleContext(ProductionContext.class, i);
		}

		public List<ProductionContext> production()
		{
			return getRuleContexts(ProductionContext.class);
		}

		public ProductionsContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_productions;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterProductions(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitProductions(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitProductions(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProductionsContext productions() throws RecognitionException
	{
		ProductionsContext _localctx = new ProductionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_productions);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do
				{
					{
						{
							setState(64);
							production();
						}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while (_la == LOWER);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionContext extends ParserRuleContext
	{
		public TerminalNode ENDOFLINE()
		{
			return getToken(XpgParser.ENDOFLINE, 0);
		}

		public TerminalNode ARROW()
		{
			return getToken(XpgParser.ARROW, 0);
		}

		public LinearRepresentationContext linearRepresentation()
		{
			return getRuleContext(LinearRepresentationContext.class, 0);
		}

		public NonterminalContext nonterminal()
		{
			return getRuleContext(NonterminalContext.class, 0);
		}

		public ProductionContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_production;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterProduction(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitProduction(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitProduction(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProductionContext production() throws RecognitionException
	{
		ProductionContext _localctx = new ProductionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_production);
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(69);
				nonterminal();
				setState(70);
				match(ARROW);
				setState(71);
				linearRepresentation();
				setState(72);
				match(ENDOFLINE);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class LinearRepresentationContext extends ParserRuleContext
	{
		public TerminalContext terminal()
		{
			return getRuleContext(TerminalContext.class, 0);
		}

		public TriplesContext triples()
		{
			return getRuleContext(TriplesContext.class, 0);
		}

		public SemanticrulesContext semanticrules()
		{
			return getRuleContext(SemanticrulesContext.class, 0);
		}

		public RulesContext rules()
		{
			return getRuleContext(RulesContext.class, 0);
		}

		public RelationsContext relations(int i)
		{
			return getRuleContext(RelationsContext.class, i);
		}

		public List<RelationsContext> relations()
		{
			return getRuleContexts(RelationsContext.class);
		}

		public NonterminalContext nonterminal()
		{
			return getRuleContext(NonterminalContext.class, 0);
		}

		public LinearRepresentationContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_linearRepresentation;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterLinearRepresentation(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitLinearRepresentation(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitLinearRepresentation(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final LinearRepresentationContext linearRepresentation() throws RecognitionException
	{
		LinearRepresentationContext _localctx = new LinearRepresentationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_linearRepresentation);
		int _la;
		try
		{
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(76);
				switch (_input.LA(1))
				{
				case LOWER:
				{
					setState(74);
					nonterminal();
				}
					break;
				case UPPER:
				{
					setState(75);
					terminal();
				}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				while (_alt != 1 && _alt != -1)
				{
					if (_alt == 1 + 1)
					{
						{
							{
								setState(78);
								relations();
							}
						}
					}
					setState(83);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				}
				setState(85);
				_la = _input.LA(1);
				if (_la == DELTA)
				{
					{
						setState(84);
						rules();
					}
				}

				setState(88);
				_la = _input.LA(1);
				if (_la == GAMMA)
				{
					{
						setState(87);
						triples();
					}
				}

				setState(91);
				_la = _input.LA(1);
				if (_la == SEMANTICRULE)
				{
					{
						setState(90);
						semanticrules();
					}
				}

			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class RelationsContext extends ParserRuleContext
	{
		public TerminalContext terminal()
		{
			return getRuleContext(TerminalContext.class, 0);
		}

		public RelationContext relation()
		{
			return getRuleContext(RelationContext.class, 0);
		}

		public NonterminalContext nonterminal()
		{
			return getRuleContext(NonterminalContext.class, 0);
		}

		public RelationsContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_relations;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterRelations(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitRelations(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitRelations(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final RelationsContext relations() throws RecognitionException
	{
		RelationsContext _localctx = new RelationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relations);
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				{
					setState(93);
					relation();
					setState(96);
					switch (_input.LA(1))
					{
					case LOWER:
					{
						setState(94);
						nonterminal();
					}
						break;
					case UPPER:
					{
						setState(95);
						terminal();
					}
						break;
					default:
						throw new NoViableAltException(this);
					}
				}
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext
	{
		public TerminalNode DELTA()
		{
			return getToken(XpgParser.DELTA, 0);
		}

		public TerminalNode RPAREN()
		{
			return getToken(XpgParser.RPAREN, 0);
		}

		public MyruleContext myrule(int i)
		{
			return getRuleContext(MyruleContext.class, i);
		}

		public List<MyruleContext> myrule()
		{
			return getRuleContexts(MyruleContext.class);
		}

		public TerminalNode LPAREN()
		{
			return getToken(XpgParser.LPAREN, 0);
		}

		public RulesContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_rules;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterRules(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitRules(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitRules(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException
	{
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rules);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(98);
				match(DELTA);
				setState(99);
				match(LPAREN);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do
				{
					{
						{
							setState(100);
							myrule();
						}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while (_la == STRING);
				setState(105);
				match(RPAREN);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class TriplesContext extends ParserRuleContext
	{
		public TerminalNode GAMMA()
		{
			return getToken(XpgParser.GAMMA, 0);
		}

		public TerminalNode RGPAREN()
		{
			return getToken(XpgParser.RGPAREN, 0);
		}

		public TerminalNode LGPAREN()
		{
			return getToken(XpgParser.LGPAREN, 0);
		}

		public List<TripleContext> triple()
		{
			return getRuleContexts(TripleContext.class);
		}

		public TripleContext triple(int i)
		{
			return getRuleContext(TripleContext.class, i);
		}

		public TriplesContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_triples;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterTriples(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitTriples(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitTriples(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TriplesContext triples() throws RecognitionException
	{
		TriplesContext _localctx = new TriplesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_triples);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(107);
				match(GAMMA);
				setState(108);
				match(LGPAREN);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do
				{
					{
						{
							setState(109);
							triple();
						}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while (_la == LPAREN);
				setState(114);
				match(RGPAREN);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class SemanticrulesContext extends ParserRuleContext
	{
		public TerminalNode RGPAREN()
		{
			return getToken(XpgParser.RGPAREN, 0);
		}

		public TerminalNode LGPAREN()
		{
			return getToken(XpgParser.LGPAREN, 0);
		}

		public TerminalNode SEMANTICRULE()
		{
			return getToken(XpgParser.SEMANTICRULE, 0);
		}

		public SemanticruleContext semanticrule()
		{
			return getRuleContext(SemanticruleContext.class, 0);
		}

		public SemanticrulesContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_semanticrules;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterSemanticrules(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitSemanticrules(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitSemanticrules(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final SemanticrulesContext semanticrules() throws RecognitionException
	{
		SemanticrulesContext _localctx = new SemanticrulesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_semanticrules);
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(116);
				match(SEMANTICRULE);
				setState(117);
				match(LGPAREN);
				setState(118);
				semanticrule();
				setState(119);
				match(RGPAREN);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext
	{
		public DriverContext driver()
		{
			return getRuleContext(DriverContext.class, 0);
		}

		public TerminalNode LT()
		{
			return getToken(XpgParser.LT, 0);
		}

		public TerminalNode COMMA()
		{
			return getToken(XpgParser.COMMA, 0);
		}

		public TesterContext tester()
		{
			return getRuleContext(TesterContext.class, 0);
		}

		public TerminalNode GT()
		{
			return getToken(XpgParser.GT, 0);
		}

		public RelationContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_relation;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterRelation(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitRelation(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitRelation(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException
	{
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_relation);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(121);
				match(LT);
				setState(122);
				driver();
				setState(124);
				_la = _input.LA(1);
				if (_la == COMMA)
				{
					{
						setState(123);
						match(COMMA);
					}
				}

				setState(127);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UPPER) | (1L << LOWER) | (1L << DIGITS))) != 0))
				{
					{
						setState(126);
						tester();
					}
				}

				setState(129);
				match(GT);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class TripleContext extends ParserRuleContext
	{
		public TerminalContext terminal()
		{
			return getRuleContext(TerminalContext.class, 0);
		}

		public ConditionContext condition()
		{
			return getRuleContext(ConditionContext.class, 0);
		}

		public List<TerminalNode> SEMICOLON()
		{
			return getTokens(XpgParser.SEMICOLON);
		}

		public TerminalNode SEMICOLON(int i)
		{
			return getToken(XpgParser.SEMICOLON, i);
		}

		public TerminalNode RPAREN()
		{
			return getToken(XpgParser.RPAREN, 0);
		}

		public MyruleContext myrule(int i)
		{
			return getRuleContext(MyruleContext.class, i);
		}

		public List<MyruleContext> myrule()
		{
			return getRuleContexts(MyruleContext.class);
		}

		public TerminalNode LPAREN()
		{
			return getToken(XpgParser.LPAREN, 0);
		}

		public TripleContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_triple;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterTriple(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitTriple(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitTriple(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TripleContext triple() throws RecognitionException
	{
		TripleContext _localctx = new TripleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_triple);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(131);
				match(LPAREN);
				setState(132);
				terminal();
				setState(133);
				match(SEMICOLON);
				setState(134);
				condition();
				setState(135);
				match(SEMICOLON);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do
				{
					{
						{
							setState(136);
							myrule();
						}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				while (_la == STRING);
				setState(141);
				match(RPAREN);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext
	{
		public TerminalNode TRUE()
		{
			return getToken(XpgParser.TRUE, 0);
		}

		public TerminalNode STRING()
		{
			return getToken(XpgParser.STRING, 0);
		}

		public TerminalNode FALSE()
		{
			return getToken(XpgParser.FALSE, 0);
		}

		public ConditionContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex()
		{
			return RULE_condition;
		}

		@Override
		public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).enterCondition(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof XpgListener) ((XpgListener) listener).exitCondition(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor)
		{
			if (visitor instanceof XpgVisitor)
				return ((XpgVisitor<? extends T>) visitor).visitCondition(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException
	{
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condition);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(143);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << STRING))) != 0)))
				{
					_errHandler.recoverInline(this);
				}
				consume();
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}
